--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -3,6 +3,8 @@ app.home=Home
 app.footer=Internship <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a> application
 app.login=Login as
 user.title=Users
+user.edit=Edit user
+user.add=Add user
 user.name=Name
 user.email=Email
 user.roles=Roles
@@ -19,6 +21,7 @@ meal.endTime=To time (exclusive)
 meal.description=Description
 meal.dateTime=Date/Time
 meal.calories=Calories
+common.add=Add
 common.select=Select
 common.delete=Delete
 common.update=Update
