--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -7,6 +7,8 @@ All REST interface covered with JUnit tests by Spring MVC Test и Spring Securit
 app.home=Home
 app.footer=<a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a> internship application
 app.login=Login as
+app.profile=profile
+user.title=Users
 user.edit=Edit user
 user.add=Add user
 user.name=Name
