--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -8,6 +8,9 @@ app.home=Home
 app.footer=<a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a> internship application
 app.login=Login as
 app.profile=profile
+app.register=Registration
+app.registered=You are registered. Please Sign in.
+
 user.title=Users
 user.edit=Edit user
 user.add=Add user
@@ -30,6 +33,7 @@ meal.endTime=To time (exclusive)
 meal.description=Description
 meal.dateTime=Date/Time
 meal.calories=Calories
+
 common.add=Add
 common.select=Select
 common.deleted=Record deleted
